--- a/docs/starter/public/assets/cssNav/nav.css
+++ b/docs/starter/public/assets/cssNav/nav.css
@@ -1,9 +1,7 @@
 
-/* first learn absoulte in relative and the checkbox trick */
-
 /**  *******************************************************************************/
-/* https://1stwebdesigner.com/how-to-create-a-responsive-dropdown-navigation-using-only-css */
-
+/* from https://1stwebdesigner.com/how-to-create-a-responsive-dropdown-navigation-using-only-css */
+/* first learn absoulte in relative and the checkbox trick */
 
 .logo > * {
 	font-size: 1.75em;
