--- a/docs/starter/public/layout/nav.pug
+++ b/docs/starter/public/layout/nav.pug
@@ -1,7 +1,7 @@
 
 .main-menu-wrap
 	.logo
-		span Express helper
+		span An eXpress.js helper
 
 	input#checkboxT(type='checkbox')
 	label(for='checkboxT')
