--- a/zdev/public/index.pug
+++ b/zdev/public/index.pug
@@ -1,6 +1,7 @@
+script.
+	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
-
-h1 #{title}
+h1 #{title}?
 p Welcome to #{title}
 
-p root
+p root 
