--- a/bark/public/assets/css/index.pug
+++ b/bark/public/assets/css/index.pug
@@ -12,6 +12,9 @@ head
 			color: var(--text);
 		}
 
+	script.
+		document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+
 body
 	header
 		nav
@@ -59,6 +62,8 @@ body
 			h4 This is a H4 heading
 			h5 This is a H5 heading
 			h6 This is a H6 heading
+			h7 This is a H7 heading
+
 			p Pragraph text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 			.spacer
 			strong This is a Strong / Bold text
