--- a/bark/public/assets/index.css
+++ b/bark/public/assets/index.css
@@ -12,25 +12,48 @@
     --menu-drop-backcolor_hover: #3498db;
     --menu-drop-color_hover: white;
 
+	--color-accent: rgb(201,84,84);
 }
 
-body, header, main, footer {
-    mxxin-width: 100vw;
+body {
+	color: white;
+	
 }
-/** sticky menu **/
-header {
-    position: sticky; 
-    top: 0;
-}
-.logo  {
-    position: relative;
-    top: -2px;
-    color: black;
-    letter-spacing: -.5px;
+:focus { outline: none; }
 
-    text-shadow: -1px 1px 2px #aba8a8;
+h1, h2, h3, h4, h5 {
+	font-family: 'Roboto Slab', serif;
+	font-weight: 500;
 }
 
-footer {
-    background-color: var(--text-lighter);
+input, button {
+	border-radius: 20px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin-right: 1rem;
+	height: 2.5rem;	
+}
+
+button {
+	background-color: var(--color-accent);
+	color: white;
+	border: none;
+
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
+button:hover {
+	background-color: blue;
+}
+
+.landingA {
+	margin-top: -1rem;
+	background-image: url('/assets/img/bull.webp');
+	/* Full height */
+	height: 100%;
+	/* Center and scale the image nicely */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
