--- a/bark/public/landing/a/index.pug
+++ b/bark/public/landing/a/index.pug
@@ -5,95 +5,34 @@ head
 	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
 	
 	link(href='https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap' rel='stylesheet')
+	link(href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet")
+
 	// the order matters due to css vars
 	link(rel='stylesheet' href='/assets/css/stylize.css')
 	link(rel='stylesheet' href='/assets/index.css')
-	link(rel='stylesheet' href='/assets/cssNav/nav.css')
+	//link(rel='stylesheet' href='/assets/cssNav/nav.css')
+	
 	script.
 		document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
 body
-	header
-		include ../../layout/nav
+	.landingA
+		p
+		.narrow
+			h3 We Know 
+			h3 You're Thirsty Fella 
+			h5 But don't worry! 
+			h5 We are brewing a heatly craft 
+			h5 beverage just for doags and will 
+			h5 be launching soon! 
 
-	main.wrap
-		p oh hi A
-		p oh hi 2
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi
-		p oh hi 
-		p oh hi 
-		p oh hi  
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
+			p
+			h6 Sign up to get update on our launch along 
+			h6 with special promotions:
 
-	footer
-		address.center
-			small
-				a.reset(href='https://twitter.com/vsnthv' target='_blank') Vasanth V
+			
+			form
+				label  Email Address *
+				input(type='text' placeholder='')
+				button Subscribe
+	
