--- a/docs/starter/public/mapp/index.pug
+++ b/docs/starter/public/mapp/index.pug
@@ -15,5 +15,5 @@ body
 	my-comp(bla=3)#c1
 		p Slot In
 
-	// and here is where you hide .js
+	// and here is how you hide .js in the above DOM
 	script(src='my-comp.js' type='module')
