--- a/docs/starter/public/mapp/index.pug
+++ b/docs/starter/public/mapp/index.pug
@@ -2,18 +2,19 @@
 head
 	script.
 		document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-
 body
-	p Oh hi
+	p View console.
 
 	script(type='module').
-		// optionaly, you can interact w/ element
-		let c = document.getElementById('c1')
+		// loosley coupled is better: 
+		import { EventBusSingleton } from '/assets/js/leb/index.js'
+		const subscription = EventBusSingleton.subscribe('MyComp', arg => console.log(arg))
 
 
 	// here is how to use it
 	my-comp(bla=3)#c1
-		p Slot In
+		p Slot In: click me!
 
 	// and here is how you hide .js in the above DOM
 	script(src='my-comp.js' type='module')
+
