--- a/docs/starter/public/landing/a/index.pug
+++ b/docs/starter/public/landing/a/index.pug
@@ -2,13 +2,14 @@
 head
 	meta(charset='UTF-8')
 	meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
-	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
+	meta(name='viewport' content="width=device-width, initial-scale=1")
 	
-	link(href='https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap' rel='stylesheet')
-	// the order matters due to css vars
-	link(rel='stylesheet' href='/assets/css/stylize.css')
+	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
+	
+	link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x' crossorigin='anonymous')
+	
 	link(rel='stylesheet' href='/assets/index.css')
-	link(rel='stylesheet' href='/assets/cssNav/nav.css')
+	
 	script.
 		document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
@@ -42,34 +43,6 @@ body
 		p oh hi 
 		p oh hi 
 		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
 		p oh hi
 		p oh hi 
 		p oh hi 
@@ -77,23 +50,13 @@ body
 		p oh hi 
 		p oh hi 
 		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
+
 		p oh hi 
 
 	footer
 		address.center
 			small
 				a.reset(href='https://twitter.com/vsnthv' target='_blank') Vasanth V
+
+	script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js' integrity='sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p' crossorigin='anonymous')
+	script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js' integrity='sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT' crossorigin='anonymous')
