--- a/docs/starter/public/landing/a/index.pug
+++ b/docs/starter/public/landing/a/index.pug
@@ -6,7 +6,7 @@ head
 	
 	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
 	
-	link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x' crossorigin='anonymous')
+	link(href='/assets/bs501/bootstrap.css' rel='stylesheet' )
 	
 	link(rel='stylesheet' href='/assets/index.css')
 	
