--- a/zdev/public/upImg/index.pug
+++ b/zdev/public/upImg/index.pug
@@ -1,6 +1,6 @@
 
 p oh hi 12
 
-form(action='/api/upImg' method='post' enctype='multipart/form-data')
+form(action='/upImg' method='post' enctype='multipart/form-data')
 	input(type='file' name='img1')
 	input(type="submit" value="Upload")
