--- a/docs/starter/public/mapp/index.pug
+++ b/docs/starter/public/mapp/index.pug
@@ -28,7 +28,7 @@ body
 		br
 		div
 			label(for = "ph") To:
-			input(name = "ph" value = "2125551212" myformat='phone')
+			input(name = "ph" value = "2125551212" mypformat='phone')
 		br
 		button(type = "submit") Send my greetings
 
@@ -40,7 +40,7 @@ body
 		br
 		div
 			label(for = "ph") To:
-			input(name = "ph" value = "2125551212" myformat='phone')
+			input(name = "ph" value = "2125551212" mypformat='phone')
 		br
 		button(type = "submit") Send my greetings
 	
