--- a/my1SSRapp/public/landing/a/index.pug
+++ b/my1SSRapp/public/landing/a/index.pug
@@ -6,11 +6,7 @@ head
 	
 	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
 	
-	link(href='/assets/bs501/bootstrap.css' rel='stylesheet' )
-	
-	link(rel='stylesheet' href='/assets/index.css')
-	
-	script.
+	link(href='/assets/style.css' rel='stylesheet' )
 
 body
 	header
@@ -53,9 +49,6 @@ body
 		p oh hi 
 
 	footer
-		address.center
-			small
-				a.reset(href='https://twitter.com/vsnthv' target='_blank') Vasanth V
 
 	script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js' integrity='sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p' crossorigin='anonymous')
 	script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js' integrity='sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT' crossorigin='anonymous')
