--- a/my1SSRapp/public/index.pug
+++ b/my1SSRapp/public/index.pug
@@ -8,7 +8,7 @@ head
 body
 	.narrow
 		p Some pages to open (this example is very similar to express.js generator, except AXthe names pug files as index.pug, so you use sub-folders to name the url): 
-		a(href='/1') A sample get route, take a look at lib to see how it works.
+		a(href='/1data') A sample get route, take a look at lib to see how it works.
 		br
 		a(href='/form') A sample post form
 		br
