--- a/my2CORSApp/src/index.pug
+++ b/my2CORSApp/src/index.pug
@@ -5,11 +5,13 @@ head
 body
 	p oh hi
 
-	one-tag
-
+	one-tag(message='yes? or no')
+		p in the slot
+	
 	script(type='module').
-		import define from '@riotjs/custom-elements'
+		import { EventBusSingleton } from 'https://cdn.jsdelivr.net/npm/axthe@0.1.4/CDN/js/leb/index.js'
 
+		import define from '@riotjs/custom-elements'
 		import OneTag from './one-tag.riot'
 
 		define('one-tag', OneTag)
