--- a/myJAMapp/src/foo/index.pug
+++ b/myJAMapp/src/foo/index.pug
@@ -5,12 +5,8 @@ head
 body
 	p oh hi foo
 
-	two-tag(message='yes? or no')
-		p in the slot
+	two-tag(message='msg')
+		p Slot at end?
 	
 	script(type='module').
 		import { EventBusSingleton } from 'https://cdn.jsdelivr.net/npm/axthe@0.1.4/CDN/js/leb/index.js'
-		import define from '@riotjs/custom-elements'
-
-		import TwoTag from './foo/two-tag.riot'
-		define('two-tag', TwoTag)
