--- a/myJAMapp/src/foo/index.pug
+++ b/myJAMapp/src/foo/index.pug
@@ -3,10 +3,9 @@ doctype html
 head
 
 body
-	p oh hi foo
+	p oh hi foo:
 
-	two-tag(message='msg')
+	hello-world
 		p Slot at end?
-	
-	script(type='module').
-		import { EventBusSingleton } from 'https://cdn.jsdelivr.net/npm/axthe@0.1.4/CDN/js/leb/index.js'
+		
+	script(src='/foo/HelloWorld.js' type='module')
