--- a/myJAMapp/src/exampleComp2/index.pug
+++ b/myJAMapp/src/exampleComp2/index.pug
@@ -12,7 +12,7 @@ body
 		label(for='lname') Last name:
 		input#lname(type='text' name='lname' value='Doe')
 
-		input(type='submit' value='Submit')
+		input#but1(type='submit' value='Submit')
 
 
-	script(src='exampleComp/MyForm.js' type='module')
+	script(src='exampleComp2/MyForm.js' type='module')
