--- a/myAPIsite/public/index.pug
+++ b/myAPIsite/public/index.pug
@@ -3,9 +3,10 @@ head
 	meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
 	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
 	
-	link(href='https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap' rel='stylesheet')
-	link(rel='stylesheet' href='/assets/css/stylize.css')
+	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
+	link(rel='stylesheet' href='/assets/css/style.css')
 body
+	p oh hi
 	.narrow
 		p Some pages to open (this example is very similar to express.js generator, except AXthe names pug files as index.pug, so you use sub-folders to name the url): 
 		a(href='/1data') A sample get route, take a look at lib to see how it works.
