--- a/myAPIsite/public/landing/a/index.pug
+++ b/myAPIsite/public/landing/a/index.pug
@@ -6,11 +6,11 @@ head
 	
 	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
 	
-	link(href='/assets/style.css' rel='stylesheet' )
+	link(rel='stylesheet' href='/assets/css/style.css')
 
 body
 	header
-		include ../../layout/nav
+		include ../../layout/top
 
 	main.wrap
 		p oh hi 1
