--- a/myJAMapp/src/exampleComp2/index.pug
+++ b/myJAMapp/src/exampleComp2/index.pug
@@ -5,7 +5,7 @@ head
 body
 	p oh hi foo:
 
-	my-form(ep='https://mysite/api/data1')
+	my-form(ep='https://localhost:8080/api/form1')
 		label(for='fname') First name:
 		input#fname(type='text' name='fname' value='John')
 
