--- a/myJAMapp/src/exampleComp2/index.pug
+++ b/myJAMapp/src/exampleComp2/index.pug
@@ -6,7 +6,7 @@ body
 	p oh hi foo:
 
 	<!-- specify the end point as attribute -->
-	my-form(ep='https://localhost:8080/api/form1')
+	my-form(ep='http://localhost:8080/api/form1')
 		label(for='fname') First name:
 		input#fname(type='text' name='fname' value='John')
 
