--- a/myAPIapp/public/landing/a/index.pug
+++ b/myAPIapp/public/landing/a/index.pug
@@ -3,21 +3,11 @@ head
 	include ../../includes/head
 
 body
-	include ../../layout/header
+	include ../../includes/header
 
 	main
 		p oh hi 1
 		p oh hi 2
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
-		p oh hi 
 		p oh hi 
 		p oh hi 
 		p oh hi 
@@ -39,5 +29,5 @@ body
 		p oh hi 
 		p oh hi 
 
-	include ../../layout/footer
+	include ../../includes/footer
 
