--- a/myAPIapp/public/index.pug
+++ b/myAPIapp/public/index.pug
@@ -4,7 +4,7 @@ head
 	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
 	
 	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
-	link(rel='stylesheet' href='/assets/css/style.css')
+	link(rel='stylesheet' href='/assets/style.css')
 body
 	p oh hi
 	.narrow
