--- a/myJAMapp/src/index.pug
+++ b/myJAMapp/src/index.pug
@@ -1,7 +1,8 @@
 doctype html
-head
-
-body
-	p oh hi
-
-
+html(lang="en")
+	head
+		meta(charset="UTF-8")
+	body
+		h1 Pug - node template engine
+		#container.col
+			p You are amazing
