--- a/myJAMapp/src/exampleComp/index.pug
+++ b/myJAMapp/src/exampleComp/index.pug
@@ -1,11 +1,11 @@
 doctype html
+html(lang="en")
+	head
+		meta(charset="UTF-8")
+	body
+		p oh hi foo:
 
-head
-
-body
-	p oh hi foo:
-
-	hello-world
-		p Slot at end?
-		
-	script(src='exampleComp/HelloWorld.js' type='module')
+		hello-world
+			p Slot at end?
+			
+		script(src='exampleComp/HelloWorld.js' type='module')
