--- a/myJAMapp/src/exampleComp1/index.pug
+++ b/myJAMapp/src/exampleComp1/index.pug
@@ -8,4 +8,4 @@ html(lang="en")
 		hello-world
 			p Slot at end?
 			
-		script(src='exampleComp/HelloWorld.js' type='module')
+		script(src='exampleComp1/HelloWorld.js' type='module')
