--- a/myAPIapp/public/index.pug
+++ b/myAPIapp/public/index.pug
@@ -9,6 +9,6 @@ body
 	p oh hi
 	.narrow
 		p Pages to open (this example is very similar to express.js generator, except AXthe names pug files as index.pug, so you use sub-folders to name the url): 
-		a(href='/1data') A sample get route, take a look at lib to see how it works.
+		a(href='/data2') A sample get route, take a look at lib to see how it works.
 		br
 		a(href='/landing/a') An example landing page
