--- a/main-app/public/articles/first/index.pug
+++ b/main-app/public/articles/first/index.pug
@@ -1,3 +1,14 @@
-
-h1 first
-p Welcome to first
+doctype html
+html
+  head
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
+    script.
+      $(document).ready(function(){
+      $.ajax({url: "/api/articles", success: function(result){
+      $("#div1").html(result);
+      }});
+      });
+  body
+    h1 first
+    p Welcome to first
+    #div1
