dynamic article loading via express

--- a/main-app/public/articles/first/index.pug
+++ b/main-app/public/articles/first/index.pug
@@ -4,11 +4,41 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script.
       $(document).ready(function(){
-      $.ajax({url: "/api/articles", success: function(result){
-      $("#div1").html(result);
+      articleId = 'first'
+      ex = [articleId]
+      if($('#' + articleId).parent().length && $('#' + articleId).parent().attr("class")){
+        nestList = $('#' + articleId).parent().attr("class").split(/\s+/);
+            $.each(nestList, function(index, value){
+              if (value != 'nested') ex.push(value);
+      })
+      }
+      console.log(ex)
+      $.ajax({
+      url: "/api/articles",
+      data: {articles: ex }, 
+      success: function(result){
+      $("#nested-" + articleId).addClass(ex.toString().replace(',',' ')).html(result);
       }});
       });
   body
-    h1 first
+    h1#first first
     p Welcome to first
-    #div1
+    #nested-first
+
+//- 
+  $(document).ready(function(){
+      articleId = 'first'
+      ex = [articleId]
+      if($('#' + articleId).parent().length && $('#' + articleId).parent().attr("class")){
+        nestList = $('#' + articleId).parent().attr("class").split(/\s+/);
+            $.each(nestList, function(index, value){
+              if (value != 'nested') ex.push(value);
+      })
+      }
+      console.log(ex)
+      $.ajax({url: "/api/articles",
+      data: {ex: ex}, 
+      success: function(result){ 
+      $(".nested").addClass(ex.toString().replace(',',' ')).html(result);
+      }});
+      });
