updated index page to pull articles

--- a/main-app/public/includes/header.pug
+++ b/main-app/public/includes/header.pug
@@ -1,2 +1,5 @@
+link(rel='stylesheet' href='../assets/header.css')
 
-p Menu: Page one, page two, etc.
+header
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light
+        p test
