--- a/main-app/public/index.pug
+++ b/main-app/public/index.pug
@@ -2,13 +2,38 @@ head
 	meta(charset='UTF-8')
 	meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
 	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
-	
-	link(href='https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap' rel='stylesheet')
-	link(rel='stylesheet' href='/assets/style.css')
+
+	link(href='../../assets/style.css' rel='stylesheet')
+	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
+	script.
+		$(document).ready(function(){
+		$.ajax({
+		url: "/api/articles", 
+		success: function(result){
+		$("#nested").html(result);
+		}});
+		});
 body
-	p oh hi
-	.narrow
-		p Some pages to open (this example is very similar to express.js generator, except AXthe names pug files as index.pug, so you use sub-folders to name the url): 
-		a(href='/1data') A sample get route, take a look at lib to see how it works.
-		br
-		a(href='/landing/a') An example landing page
+		header
+			.navbar.navbar-dark.bg-dark.shadow-sm
+				.container
+					a.navbar-brand.d-flex.align-items-center(href='#')
+						strong Urbanity
+		main
+			section.py-5.text-center.container
+				.row.py-lg-5
+					.col-lg-6.col-md-8.mx-auto
+						h1.fw-light Urbanity Articles
+						p.lead.text-muted Articles from Urbanity
+			#nested
+
+		footer.text-muted.py-5
+			.container
+				p.float-end.mb-1
+					a(href='#') Back to top
+				p.mb-1 Album example is &copy; Bootstrap, but please download and customize it for yourself!
+				p.mb-0 New to Bootstrap? 
+					a(href='/') Visit the homepage
+					| or read our
+					a(href='../getting-started/introduction/') getting started guide
+					| .
