added supabase to api

--- a/main-app/public/includes/header.pug
+++ b/main-app/public/includes/header.pug
@@ -1,5 +1,20 @@
-link(rel='stylesheet' href='../assets/header.css')
+link(rel='stylesheet' href='/assets/css/header.css')
 
 header
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
-        p test
+    .navbar.navbar-dark.bg-dark.shadow-sm
+        .container
+            a.navbar-brand.d-flex.align-items-center(href='#')
+                strong Urbanity
+            span.searchbox 
+                input(type='text' name='search-query' placeholder=' Search for stories, articles, content ...')
+    .scrolling-headline  
+        .scrolling-content  
+            p test1 
+            p test2 
+            p test3 
+            p test4 
+            p test1 
+            p test2 
+            p test3 
+            p test4 
+            //- p test5
