--- a/main-app/public/articles/first/index.pug
+++ b/main-app/public/articles/first/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(href='../../assets/style.css' rel='stylesheet')
+    link(href='../../assets/css/style.css' rel='stylesheet')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script.
       $(document).ready(function(){
