--- a/main-app/public/articles/index.pug
+++ b/main-app/public/articles/index.pug
@@ -3,7 +3,7 @@ head
 	meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
 	meta(name='viewport' content='width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
 
-	link(href='../../assets/style.css' rel='stylesheet')
+	link(href='../../assets/css/style.css' rel='stylesheet')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
 	script.
 		$(document).ready(function(){
