api for supabase + integration with frontend components

--- a/main-app/public/includes/header.pug
+++ b/main-app/public/includes/header.pug
@@ -5,6 +5,7 @@ header
         .container
             a.navbar-brand.d-flex.align-items-center(href='#')
                 strong Urbanity
+            button.createButton 
             span.searchbox 
                 input(type='text' name='search-query' placeholder=' Search for stories, articles, content ...')
     .scrolling-headline  
@@ -13,8 +14,5 @@ header
             p test2 
             p test3 
             p test4 
-            p test1 
-            p test2 
-            p test3 
-            p test4 
+
             //- p test5
