--- a/main-app/public/index.pug
+++ b/main-app/public/index.pug
@@ -5,23 +5,36 @@ head
 
 	link(href='../../assets/css/style.css' rel='stylesheet')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
-	script.
-		$(document).ready(function(){
-		$.ajax({
-		url: "/api/articles", 
-		success: function(result){
-		$("#nested").html(result);
-		}});
-		});
 body
 
+		
 		main
 			section.py-5.text-center.container
 				.row.py-lg-5
 					.col-lg-6.col-md-8.mx-auto
 						h1.fw-light Urbanity Articles
 						p.lead.text-muted Articles from Urbanity
-			#nested
+			.row
+				.col-sm-3
+						#side-card.card
+							.card-body
+								.row.side-card-title
+									h5.card-title Trending Section
+								.row.side-card-content
+									p.card-text
+										| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+										| ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+										| laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+										| velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+										| sunt in culpa qui officia deserunt mollit anim id est laborum.
+								.row.side-card-meta
+									span User
+									span Likes
+									span Comments
+				.col-sm-7
+					- var articles =  JSON.parse(articles)
+					each article in articles 
+						include /assets/pug/main-card-template.pug
 
 		footer.text-muted.py-5
 			.container
