--- a/main-app/public/assets/pug/main-card/main-card-text.pug
+++ b/main-app/public/assets/pug/main-card/main-card-text.pug
@@ -1,4 +1,4 @@
-link(href='/assets/css/main-card.css' rel='stylesheet')
+link(href='/assets/css/main-page.css' rel='stylesheet')
 
 #main-card.card
     .card-body
@@ -15,4 +15,4 @@ link(href='/assets/css/main-card.css' rel='stylesheet')
                 | both chambers yet, but they’re expected to in the coming months — and they’re indicative
                 | of a renewed focus in Congress on confronting the Chinese government more directly.
         .row.main-card-meta
-            include /assets/pug/main-card-footer.pug
+            include /assets/pug/main-card/main-card-footer.pug
