--- a/main-app/public/assets/pug/user-profile.pug
+++ b/main-app/public/assets/pug/user-profile.pug
@@ -1,4 +1,4 @@
-link(rel='stylesheet' href='/assets/css/user-profile.css')
+link(rel='stylesheet' href='/assets/css/main-page.css')
 
 .profile
     a(href="") 
