--- a/main-app/public/assets/pug/main-card/main-card-footer.pug
+++ b/main-app/public/assets/pug/main-card/main-card-footer.pug
@@ -1,4 +1,4 @@
-link(href='/assets/css/main-card.css' rel='stylesheet')
+link(href='/assets/css/main-page.css' rel='stylesheet')
 
 span.main-card-footer
     .upvote
