--- a/main-app/public/includes/header.pug
+++ b/main-app/public/includes/header.pug
@@ -2,12 +2,19 @@ link(rel='stylesheet' href='/assets/css/header.css')
 
 header
     .navbar.navbar-dark.bg-dark.shadow-sm
-        .container
-            a.navbar-brand.d-flex.align-items-center(href='#')
-                strong Urbanity
-            button.createButton 
-            span.searchbox 
-                input(type='text' name='search-query' placeholder=' Search for stories, articles, content ...')
+        .container.header-container
+            .row.header-row 
+                .col-md-2.header-logo
+                    a.navbar-brand.d-flex.align-items-center(href='#')
+                        strong Urbanity
+                .col-md-8
+                    .row.header-assets-outer
+                        .col-md-12.d-flex.justify-content-end.header-assets-inner
+                            .ha-inner1
+                                form.search-bar
+                                    input.search-bar-input(type='search' 
+                                        name='search-query' placeholder='')
+                .col-md-2
     .scrolling-headline  
         .scrolling-content  
             p test1 
