--- a/main-app/public/index.pug
+++ b/main-app/public/index.pug
@@ -15,26 +15,15 @@ body
 						h1.fw-light Urbanity Articles
 						p.lead.text-muted Articles from Urbanity
 			.row
-				.col-sm-3
-						#side-card.card
-							.card-body
-								.row.side-card-title
-									h5.card-title Trending Section
-								.row.side-card-content
-									p.card-text
-										| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-										| ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-										| laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-										| velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-										| sunt in culpa qui officia deserunt mollit anim id est laborum.
-								.row.side-card-meta
-									span User
-									span Likes
-									span Comments
-				.col-sm-7
+				.col-md-2
+					.side-bar 
+						include /assets/pug/side-card/side-card.pug
+				.col-md-2
+					include /assets/pug/content-entry-with-post.pug
+				.col-sm-8
 					- var articles =  JSON.parse(articles)
 					each article in articles 
-						include /assets/pug/main-card-template.pug
+						include /assets/pug/main-card/main-card-template.pug
 
 		footer.text-muted.py-5
 			.container
