--- a/main-app/public/landing/a/index.pug
+++ b/main-app/public/landing/a/index.pug
@@ -4,8 +4,8 @@ head
 	meta(name='viewport' content='width=device-width, initial-scale=1.0')
 	meta(http-equiv='X-UA-Compatible' content='ie=edge')
 	link(href='/assets/css/style.css' rel='stylesheet')
-	link(rel='stylesheet' href='/assets/css/header.css')
-	link(href='/assets/css/landingA.css' rel='stylesheet')
+	link(href='/assets/css/header.css' rel='stylesheet')
+	link(href='/assets/css/main-page.css' rel='stylesheet')
 	meta(name='Description' content='Enter your description here')
 	title Title
 
@@ -15,24 +15,11 @@ body
 	.container
 		.main-body 
 			.row
-				.col-sm-3
-					#side-card.card
-						.card-body
-							.row.side-card-title
-								h5.card-title Trending Section
-							.row.side-card-user
-								include /assets/pug/user-profile
-							.row.side-card-content
-								p.card-text
-									| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-									| ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									| laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-									| velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-									| sunt in culpa qui officia deserunt mollit anim id est laborum.
-							.row.side-card-meta
-								span User
-								span Likes
-								span Comments
-				.col-sm-9
-					include /assets/pug/main-card.pug
-							
+				.col-md-2
+					.side-bar 
+						include /assets/pug/side-card/side-card.pug
+				.col-md-2
+					include /assets/pug/content-entry.pug
+				.col-md-8
+					include /assets/pug/main-card/main-card-text.pug
+					include /assets/pug/main-card/main-card-video.pug
